[gd_scene load_steps=2 format=3 uid="uid://boopc1snivn8r"]

[ext_resource type="Script" path="res://Authentication.gd" id="1_uyg4n"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyg4n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -152.0
offset_top = -462.0
offset_right = 148.0
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not logged in"
horizontal_alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log in"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
